p6/tests/t060.err
Semantic error on line 10: The type of object 'my_circle' does not match the type of the parameter to the animation block 'rectangle_bounce'
